--- a/src/component/body/body.css
+++ b/src/component/body/body.css
@@ -1,3 +1,136 @@
-.budy {
-  color: green;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+/* Globber css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Css component */
+:root {
+  --font: "Poppins", sans-serif;
+  --font-w-bold: 700;
+  --font-w-smBold: 600;
+  --font-w-md: 500;
+  --font-w-regular: 400;
+  --font-w-light: 300;
+  --pry-color: rgba(134, 9, 32, 1);
+  --sec-color: rgba(9, 134, 111, 1);
+  --text-colour: rgba(52, 58, 64, 1);
+  --sec-text-color: rgba(123, 125, 128, 1);
+  --text-sm: 14px;
+  --text-md: 16px;
+  --tet-color: rgba(224, 168, 167, 1);
+}
+
+img {
+  display: block;
+}
+
+body {
+  max-width: 100%;
+  height: 100vh;
+}
+
+section {
+  margin: 2rem 6.5rem;
+}
+
+section .filter-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.mobile-container {
+  display: none;
+}
+
+.mobile {
+  display: none;
+}
+
+.mobile p {
+  font-family: var(--font);
+  font-weight: var(--font-w-smBold);
+  font-size: var(--text-md);
+  color: var(--pry-color);
+}
+
+section .list-box {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+
+section .list-box p {
+  font-family: var(--font);
+  font-weight: var(--font-w-md);
+  font-size: var(--text-sm);
+  padding-right: 5px;
+  color: rgba(0, 0, 0, 1);
+}
+
+section .filter-box {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+section .filter-box img {
+  margin: 5px;
+}
+
+section .filter-box p {
+  font-family: var(--font);
+  font-weight: var(--font-w-light);
+  font-size: var(--text-sm);
+}
+
+section .filter-box span {
+  font-family: var(--font);
+  font-weight: var(--font-w-smBold);
+  font-size: var(--text-sm);
+  text-transform: capitalize;
+  color: var(--pry-color);
+}
+
+@media (max-width: 1355px) {
+  .nav-container {
+    padding: 1.3rem 3.5rem;
+  }
+  section {
+    margin: 2rem 3.5rem;
+  }
+}
+
+@media (max-width: 1000px) {
+}
+
+@media (max-width: 851px) {
+  .nav-container {
+    padding: 1rem 2rem;
+  }
+  section .list-box {
+    display: none;
+  }
+  section .filter-box {
+    display: none;
+  }
+  section {
+    margin: 1em 2rem;
+  }
+  .mobile-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+  .mobile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
 }
