--- a/src/component/footer/footer.css
+++ b/src/component/footer/footer.css
@@ -1,3 +1,194 @@
-.foot {
-  color: blue;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+/* Globber css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Css component */
+:root {
+  --font: "Poppins", sans-serif;
+  --font-w-bold: 700;
+  --font-w-smBold: 600;
+  --font-w-md: 500;
+  --font-w-regular: 400;
+  --font-w-light: 300;
+  --pry-color: rgba(134, 9, 32, 1);
+  --sec-color: rgba(9, 134, 111, 1);
+  --text-colour: rgba(52, 58, 64, 1);
+  --sec-text-color: rgba(123, 125, 128, 1);
+  --text-sm: 14px;
+  --text-md: 16px;
+  --tet-color: rgba(224, 168, 167, 1);
+}
+
+img {
+  display: block;
+}
+
+body {
+  max-width: 100%;
+  height: 100vh;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+}
+
+footer .contact {
+  background-color: rgba(54, 54, 54, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  padding: 3rem 6.5rem;
+}
+
+footer .contact .text {
+  font-family: var(--font);
+  font-size: var(--text-md);
+  font-weight: var(--font-w-regular);
+  color: rgba(242, 243, 243, 1);
+  width: 278px;
+}
+
+.email-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.email {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1em 2em;
+  gap: 20px;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.email .name {
+  font-family: var(--font);
+  font-size: 14px;
+  font-weight: var(--font-w-regular);
+  color: rgba(123, 125, 128, 1);
+}
+
+.email-container .sub {
+  background-color: var(--pry-color);
+  padding: 1em;
+  width: 130px;
+  text-align: center;
+  margin: 0;
+  color: rgba(255, 255, 255, 1);
+  font-family: var(--font-w-md);
+}
+
+.foot-continer {
+  padding: 2rem 6.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  background-color: rgba(27, 27, 27, 1);
+  margin-bottom: 0;
+  border: 2px solid rgba(27, 27, 27, 1);
+}
+
+.foot-continer .timbu p {
+  font-family: var(--font);
+  font-size: var(--text-sm);
+  font-weight: var(--font-w-regular);
+  color: rgba(242, 243, 243, 1);
+  width: 366px;
+  line-height: 24px;
+  padding: 1em 0;
+}
+
+.social-media {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+}
+
+.header {
+  font-family: var(--font);
+  font-size: 16px;
+  font-weight: var(--font-w-md);
+  color: rgba(242, 243, 243, 1);
+}
+
+.para {
+  font-family: var(--font);
+  font-size: var(--text-sm);
+  font-weight: var(--font-w-regular);
+  color: rgba(166, 167, 169, 1);
+  padding: 0.5em 0;
+}
+
+footer .copy {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  padding: 2rem;
+  background-color: rgba(27, 27, 27, 1);
+  border: 1px solid rgba(27, 27, 27, 1);
+}
+
+.para-copy {
+  font-family: var(--font);
+  font-size: var(--text-sm);
+  font-weight: var(--font-w-regular);
+  color: rgba(242, 243, 243, 1);
+}
+
+@media (max-width: 1355px) {
+  footer .contact {
+    gap: 10px;
+    padding: 2rem 3.5rem;
+  }
+  .foot-continer {
+    padding: 2rem 3.5rem;
+  }
+  .foot-continer .timbu p {
+    font-family: var(--font);
+    font-size: var(--text-sm);
+    font-weight: var(--font-w-regular);
+    width: 300px;
+  }
+}
+
+@media (max-width: 850px) {
+  .nav-container {
+    padding: 1rem 2rem;
+  }
+  footer .contact {
+    flex-direction: column;
+    padding: 2rem 2rem;
+    gap: 1em;
+  }
+  .foot-continer {
+    flex-direction: column;
+    padding: 2rem 2rem;
+    gap: 1.5em;
+  }
+  .email {
+    padding: 0.9em;
+    gap: 5px;
+    background-color: rgba(255, 255, 255, 1);
+  }
+  .email-container .sub {
+    padding: 0.89em;
+    width: 120px;
+  }
+  footer .contact .text {
+    text-align: center;
+  }
+  .email .name {
+    font-size: 12px;
+  }
 }
