--- a/src/component/navbar/nav.css
+++ b/src/component/navbar/nav.css
@@ -1,3 +1,162 @@
-.nav {
-  color: red;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+/* Globber css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Css component */
+:root {
+  --font: "Poppins", sans-serif;
+  --font-w-bold: 700;
+  --font-w-smBold: 600;
+  --font-w-md: 500;
+  --font-w-regular: 400;
+  --font-w-light: 300;
+  --pry-color: rgba(134, 9, 32, 1);
+  --sec-color: rgba(9, 134, 111, 1);
+  --text-colour: rgba(52, 58, 64, 1);
+  --sec-text-color: rgba(123, 125, 128, 1);
+  --text-sm: 14px;
+  --text-md: 16px;
+  --tet-color: rgba(224, 168, 167, 1);
+}
+
+img {
+  display: block;
+}
+
+body {
+  max-width: 100%;
+  height: 100vh;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.3rem 6.5rem;
+  border-bottom: 1px solid var(--tet-color);
+}
+
+.menu-box {
+  display: none;
+}
+
+.serach-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-box {
+  border: 1px solid var(--tet-color);
+  padding: 1rem 25rem 1rem 1rem;
+}
+
+.text-box .para {
+  font-family: var(--font);
+  font-size: var(--text-sm);
+  font-weight: var(--font-w-light);
+  color: var(--sec-text-color);
+}
+
+.serach-box-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--pry-color);
+  padding: 1.4rem 1.5rem;
+}
+
+.serach-box-icon p {
+  font-family: var(--font);
+  font-weight: var(--font-w-md);
+  font-size: var(--text-md);
+  color: rgba(250, 243, 243, 1);
+  padding-left: 4px;
+}
+
+.details-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+  padding-right: 31px;
+}
+
+.profile-icon {
+  width: 32px;
+  height: 32px;
+}
+
+.profile-details .paragra {
+  font-family: var(--font);
+  font-size: 12px;
+  font-weight: var(--font-w-light);
+  color: rgba(0, 0, 0, 1);
+}
+
+.profile-details .paragra1 {
+  font-family: var(--font);
+  font-weight: var(--font-w-md);
+  font-size: var(--text-sm);
+  color: rgba(0, 0, 0, 1);
+}
+
+.cart-box {
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 1355px) {
+  .nav-container {
+    padding: 1.3rem 3.5rem;
+  }
+  .text-box {
+    padding: 1rem 14rem 1rem 1rem;
+  }
+}
+
+@media (max-width: 1100px) {
+  .text-box {
+    padding: 1rem 8rem 1rem 1rem;
+  }
+}
+
+@media (max-width: 950px) {
+  .nav-container {
+    padding: 1.3rem 3.5rem;
+  }
+  .text-box {
+    padding: 1rem 2rem 1rem 1rem;
+  }
+}
+
+@media (max-width: 854px) {
+  .serach-box {
+    display: none;
+  }
+  .details-box {
+    display: none;
+  }
+  .nav-container {
+    padding: 1rem 2rem;
+  }
+  .logo {
+    width: 50px;
+    height: 30px;
+  }
+  .menu-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+  }
 }
