--- a/src/component/products/products.css
+++ b/src/component/products/products.css
@@ -28,8 +28,8 @@ body {
   margin: 2rem auto;
   padding-left: 10px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 1rem 0rem;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 1rem 1rem;
   justify-content: center;
 }
 
@@ -43,7 +43,7 @@ body {
   justify-content: center;
   border: 1px solid var(--tet-color);
   padding: 20px;
-  width: 300px;
+  width: 100%;
 }
 
 .card-image {
@@ -51,7 +51,7 @@ body {
 }
 
 .sneakers {
-  width: 255px;
+  width: 100%;
   height: 355px;
 }
 
@@ -93,12 +93,12 @@ body {
 
 .card .button {
   margin-top: 1.5rem;
-  padding: 10px 30px;
+  padding: 10px 20px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
   background-color: rgba(250, 243, 243, 1);
   border: 1px solid var(--tet-color);
   text-decoration: none;
@@ -115,86 +115,7 @@ body {
   font-size: var(--text-sm);
 }
 
-@media (max-width: 1628px) {
-}
-
-@media (max-width: 1355px) {
-  footer .contact {
-    gap: 10px;
-    padding: 2rem 3.5rem;
-  }
-  .foot-continer {
-    padding: 2rem 3.5rem;
-  }
-  .foot-continer .timbu p {
-    font-family: var(--font);
-    font-size: var(--text-sm);
-    font-weight: var(--font-w-regular);
-    width: 300px;
-  }
-}
-
-@media (max-width: 853px) {
-  .container {
-    margin: 1rem 0;
-    padding: 2px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px 15px;
-  }
-  .card {
-    padding: 10px;
-    width: 235px;
-  }
-  .sneakers {
-    width: 210px;
-    height: 250px;
-  }
-  .title-price .title {
-    font-weight: var(--font-w-md);
-    font-size: var(--text-sm);
-  }
-  .title-price .price {
-    font-weight: var(--font-w-md);
-    font-size: 14px;
-  }
-  .card .discrip {
-    width: 180px;
-    font-size: 12px;
-    font-weight: var(--font-w-light);
-  }
-}
-
-@media (max-width: 720px) {
-  .container {
-    margin: 1rem 0;
-    padding: 2px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px 15px;
-  }
-  .card {
-    padding: 10px;
-    width: 300px;
-  }
-  .sneakers {
-    width: 278px;
-    height: 350px;
-  }
-  .title-price .title {
-    font-weight: var(--font-w-smBold);
-    font-size: var(--text-md);
-  }
-  .title-price .price {
-    font-weight: var(--font-w-smBold);
-    font-size: 14px;
-  }
-  .card .discrip {
-    width: 280px;
-    font-size: 16px;
-    font-weight: var(--font-w-regular);
-  }
-}
-
-@media (max-width: 618px) {
+@media (max-width: 700px) {
   .container {
     margin: 1rem 0;
     padding: 2px;
@@ -203,10 +124,10 @@ body {
   }
   .card {
     padding: 10px;
-    width: 230px;
+    width: 100%;
   }
   .sneakers {
-    width: 200px;
+    width: 100%;
     height: 300px;
   }
   .title-price .title {
@@ -233,10 +154,10 @@ body {
   }
   .card {
     padding: 10px;
-    width: 173px;
+    width: 100%;
   }
   .sneakers {
-    width: 150px;
+    width: 100%;
     height: 180px;
   }
   .title-price .title {
@@ -251,5 +172,9 @@ body {
     width: 140px;
     font-size: 12px;
     font-weight: var(--font-w-light);
+  }
+  .card .button {
+    padding: 10px 10px;
+    gap: 10px;
   }
 }
