--- a/src/component/footer/footer.css
+++ b/src/component/footer/footer.css
@@ -173,7 +173,7 @@ footer .copy {
   }
   .foot-continer {
     flex-direction: column;
-    padding: 0rem 2rem;
+    padding: 2rem 2rem 0 2rem;
     gap: 1.5em;
   }
   .email {
