--- a/src/component/body/body.css
+++ b/src/component/body/body.css
@@ -119,7 +119,7 @@ section .filter-box span {
     display: none;
   }
   section {
-    margin: 1em 2rem;
+    margin: 2rem;
   }
   .mobile-container {
     display: flex;
@@ -132,5 +132,10 @@ section .filter-box span {
     align-items: center;
     justify-content: center;
     gap: 10px;
+  }
+}
+@media (max-width: 400px) {
+  section {
+    margin: 2em 1em;
   }
 }
