--- a/src/component/navbar/nav.css
+++ b/src/component/navbar/nav.css
@@ -113,6 +113,20 @@ body {
 .cart-box {
   display: flex;
   align-items: center;
+  position: relative;
+}
+
+.cart-item-count {
+  position: absolute;
+  top: -15px;
+  right: 20px;
+  background-color: var(--pry-color);
+  color: white;
+  border-radius: 50%;
+  padding: 2px 3px;
+  font-size: 12px;
+  min-width: 20px;
+  text-align: center;
 }
 
 @media (max-width: 1355px) {
@@ -158,6 +172,12 @@ body {
     justify-content: center;
     align-items: center;
     gap: 25px;
+    position: relative;
+  }
+  .cart-item-count {
+    position: absolute;
+    top: -10px;
+    right: 33px;
   }
 }
 
