--- a/src/component/ckeckOutCom/checkout.css
+++ b/src/component/ckeckOutCom/checkout.css
@@ -39,6 +39,10 @@ body {
   align-items: center;
 }
 
+.check-cart-col1 {
+  margin: 2em 6.5em;
+}
+
 .check-container-coloum {
   display: flex;
   flex-direction: column;
@@ -211,6 +215,9 @@ body {
   .check2 {
     right: 50px;
   }
+  .check-cart-col1 {
+    margin: 2em 3.5em;
+  }
 }
 
 @media (max-width: 1270px) {
@@ -237,6 +244,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    margin-top: 1rem;
   }
   .customer-info-col {
     width: 580px;
@@ -244,6 +252,9 @@ body {
   .check2 {
     width: 580px;
     position: static;
+  }
+  .main {
+    display: none;
   }
 }
 
@@ -256,6 +267,15 @@ body {
   }
   .input-box {
     width: calc(100% / 1);
+  }
+  .checkout-container {
+    width: 100%;
+  }
+  .sum-line {
+    width: 100%;
+  }
+  .summary {
+    width: 100%;
   }
 }
 
